[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/Room1.bmp" type="Texture" id=1]
[ext_resource path="res://src/actors/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/actors/Plant.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/Untitled.bmp" type="Texture" id=4]
[ext_resource path="res://src/levels/room1.gd" type="Script" id=5]
[ext_resource path="res://src/userinterface/pausescreen.tscn" type="PackedScene" id=6]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=3]
0/name = "Untitled.bmp 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = true
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": true,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[node name="Node2D" type="Node2D"]
script = ExtResource( 5 )

[node name="UserInterface" type="CanvasLayer" parent="."]
layer = 100

[node name="Control" parent="UserInterface" instance=ExtResource( 6 )]

[node name="Water Button" type="Button" parent="UserInterface"]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 122.0
margin_top = -106.0
margin_right = 214.0
margin_bottom = -62.0
text = "WATER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 72, 201 )
z_index = 1
collision_mask = 4

[node name="Sprite" parent="." instance=ExtResource( 3 )]
position = Vector2( 211, 162 )

[node name="TextureRect" type="TextureRect" parent="."]
show_behind_parent = true
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="TextureRect"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -101.0
margin_top = -47.5
margin_right = 101.0
margin_bottom = 21.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TextureRect/ColorRect"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -35.5
margin_right = 185.0
margin_bottom = 36.5
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="."]
monitorable = false
collision_layer = 4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( 191, 173, 182, 153, 161, 153, 161, 215, 269, 215, 268, 151, 243, 155, 230, 195, 189, 197 )

[node name="TileMap2" type="TileMap" parent="."]
modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 1, 1, 1, 0 )
tile_set = SubResource( 3 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 131062, 0, 0, 262143, 0, 0, 327679, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 393215, 0, 0, 327690, 0, 0, 458751, 0, 0, 393226, 0, 0, 524287, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0 )
[connection signal="button_up" from="UserInterface/Water Button" to="." method="_on_Water_Button_up"]
[connection signal="area_entered" from="Area2D" to="." method="_on_water_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_water_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_water_area_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_water_area_body_exited"]
